# TC-LOGO

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  index.html  params.json
scripts/: compile.sh
src/: logo.c  logo.h  logo.l  logo.l~  logo.y  logo.y~  test_logo.c
test/: test_logo.c
tst/: BASIC.logo  MANY-TESTS.logo
